[package]
name = "openapiv3"
version = "0.2.0"
authors = ["Glade Miller <glademiller@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["openapi", "v3"]
homepage = "https://github.com/glademiller/openapiv3"
repository = "https://github.com/glademiller/openapiv3"
description = "This crate aims to provide data structures that represent the Open API v3 specification easily deserializable with serde."

[dependencies]
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
serde_yaml = "0.8"

[replace]
"serde:1.0.92" = { path = "../serde/serde", features = ["verbose-debug"] }
